--- a/api/app/templates/phrases/phrase-flow.html
+++ b/api/app/templates/phrases/phrase-flow.html
@@ -159,6 +159,7 @@ function playNext() {
 
     const speed = Number(wpmEl.value);
     player.setWpm(speed);
+    player.setEws(getEWS());
 
     const word = getLine();
     console.log(word);
@@ -211,6 +212,10 @@ function display_title(){
     document.getElementById("reveal_title").style.display = "block";
 }
 
+function getEWS(){
+    return wsEl.options[wsEl.selectedIndex].value - 1;
+        
+}
 
 
 
