--- a/api/app/templates/base.html
+++ b/api/app/templates/base.html
@@ -97,6 +97,7 @@
 										<li><a href="/phrases">Phrase Copy Practice</a></li>
 										<li><a href="/phrases/sending">Phrase Sending Practice</a></li>
 										<li><a href="/phrases/ttr">Word Flow/TTR</a></li>
+										<li><a href="/phrases/phrase-flow">Phrase Flow/IFR</a></li>
 										<li><a href="/callsigns/trainer">Callsign Trainer</a></li>
 										<li>
 											<span class="opener">Books</span>
