--- a/api/app/templates/phrases/phrase-flow.html
+++ b/api/app/templates/phrases/phrase-flow.html
@@ -62,7 +62,7 @@
         <BR>
     </div>
     <div style="margin: 5px; float: left; border: 1px solid black; padding: 3px; background-color: #eeeeee; max-width: 600px;" >
-        <H2>Phrase Flow / Instant Flow recovery</H2>
+        <H2>Phrase Flow / Instant Flow Recovery</H2>
         This is a phrase flow and Instant Flow Recovery (IFR) exercise. Go with the flow. Focus on forward motion.   
         If a word is missed, ignore it. Focus on catching the next word. 
         <BR><BR>
