--- a/api/app/templates/phrases/phrase-flow.html
+++ b/api/app/templates/phrases/phrase-flow.html
@@ -60,6 +60,7 @@
         <button id="buttonPlayCW"  ">Play</button>
         <button id="buttonStopCW"  ">Stop</button>
         <BR>
+        <DIV style = "border:1px solid black; background-color: beige;"> Friends:  There's a bug here.  If it doesn't play, press STOP and then PLAY again. I should have that silly bug eradicated tomorrow.   <BR> -- Duane </DIV>    
     </div>
     <div style="margin: 5px; float: left; border: 1px solid black; padding: 3px; background-color: #eeeeee; max-width: 600px;" >
         <H2>Phrase Flow / Instant Flow Recovery</H2>
