--- a/api/app/templates/phrases/phrase-flow.html
+++ b/api/app/templates/phrases/phrase-flow.html
@@ -60,7 +60,7 @@
         <button id="buttonPlayCW"  ">Play</button>
         <button id="buttonStopCW"  ">Stop</button>
         <BR>
-        <DIV style = "border:1px solid black; background-color: beige;"> Friends:  There's a bug here.  If it doesn't play, press STOP and then PLAY again. I should have that silly bug eradicated tomorrow.   <BR> -- Duane </DIV>    
+    
     </div>
     <div style="margin: 5px; float: left; border: 1px solid black; padding: 3px; background-color: #eeeeee; max-width: 600px;" >
         <H2>Phrase Flow / Instant Flow Recovery</H2>
@@ -116,7 +116,7 @@ function initPlayer() {
     player = new jscw();
     player.init();
 
-    player.onFinished = scheduleNext;
+    player.onFinished = playNext;
 }
 
 /* ===============================
@@ -135,10 +135,6 @@ function startCW() {
 function stopCW() {
     running = false;
 
-    if (nextTimeout) {
-        clearTimeout(nextTimeout);
-        nextTimeout = null;
-    }
 
     if (player) {
         player.stop();
@@ -165,20 +161,11 @@ function playNext() {
 
     const word = getLine();
     console.log(word);
-    player.play(prefix + " " + word);
+    player.play(prefix + " " + word + " ");
     prefix = "  =   ";
 
 }
 
-function scheduleNext() {
-    if (!running) return;
-
-    const delay = getWordSpace();
-
-    nextTimeout = setTimeout(() => {
-        playNext();
-    }, delay);
-}
 
 /* ===============================
    Helpers
@@ -195,6 +182,8 @@ function getWordSpace() {
 
 function getLine() {
     repcount++;
+        let line = null;
+        let lastline = null;
         if (repcount >= repititions) {
             randomIndex = Math.floor(Math.random() * lines.length);
             line = lines[randomIndex].trim().replace("~"," ")
