--- a/api/app/templates/base.html
+++ b/api/app/templates/base.html
@@ -143,6 +143,9 @@
 											<a href="https://blog.duanemcguire.com">Duane's Blog</a>
 										</li>
 										<li class="icon solid fa-globe">
+											<a href="https://mcguirepiano.com">McGuire Piano</a>
+										</li>
+										<li class="icon solid fa-globe">
 											<a href="https://qrz.com/db/WA7PGE">QRZ</a>
 										</li>
 										<li class="icon solid fa-globe">
