--- a/api/app/templates/phrases/phrase-flow.html
+++ b/api/app/templates/phrases/phrase-flow.html
@@ -100,7 +100,7 @@ let player = null;
 let running = false;
 let lines = {{ lines | safe }};
 let prefix = 'VVV  ';
-let lastLine = '';
+let lastline = '';
 let repcount = 0;
 let repititions = {{ attr['repititions'] }};
 document.getElementById('wordSpace').innerText = getWordSpace();
