new song lists from students

--- a/api/app/templates/base.html
+++ b/api/app/templates/base.html
@@ -103,7 +103,7 @@
 										<li><a href="/">Home</a></li>
 										<li><a href="/phrases">Phrase Copy Practice</a></li>
 										<li><a href="/phrases/sending">Phrase Sending Practice</a></li>
-										<li><a href="/phrases/ttr">Word Discovery/TTR</a></li>
+										<li><a href="/phrases/ttr">Word Building/TTR</a></li>
 										<li><a href="/phrases/phrase-flow">Phrase Flow/IFR</a></li>
 										<li><a href="/callsigns/trainer">Callsign Trainer</a></li>
 										<li>
