--- a/api/app/templates/phrases/ttr.html
+++ b/api/app/templates/phrases/ttr.html
@@ -12,7 +12,7 @@
 </style>
 <script src="api/app/static/js/jscwlib.js"></script>
 <div class="content" >
-    <h2>Word Discovery/TTR</h2>
+    <h2>Word Building/TTR</h2>
 
     <div style="float: left">
         <form method="GET" id='theForm' >
@@ -55,7 +55,7 @@
         <div class="line-display" id="reveal_title" style="display:block; font-size: 3em; padding: 5px; float: left; color: white" >|</div>    
     </div>
     <div style="margin: 5px; float: left; border: 1px solid black; padding: 3px; background-color: #eeeeee; max-width: 600px;" >
-        <H2>Word Discovery / TTR</H2>
+        <H2>Word Building / TTR</H2>
         This is a word discovery exercise. Go with the flow. Focus on forward motion.   
         If a word is missed, ignore it. Focus on catching the next word. 
         Because the words are presented randomly, and without context, you may find this to be 
