User Guide, Phrase Copy Tool

--- a/api/app/templates/base.html
+++ b/api/app/templates/base.html
@@ -55,19 +55,11 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="/" class="logo"><strong>CW WA7PGE</a>
-									<!---
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									</ul>
-									--->
-									<div class="icons">
-										<img src="/static/images/duane.png">
+									<div style="float: left">
+									<h1 style="font-size: 1.5em;">CW Practice Tools -- Intermediate Level</h1>
+									<h2 style="font-size: 1.2em;">Progressing from Recognition to Fluency</h2>	
 									</div>
+
 								</header>
 
 							<!-- Content -->
