--- a/api/app/templates/index.html
+++ b/api/app/templates/index.html
@@ -2,12 +2,16 @@
 
 {% block content %}
     <div class="content">
-        <p>
+        <div style="float: left">
+            <div style="float: left; max-width: 80%">
             <h3>Duane McGuire, WA7PGE</h3>
             I enjoy CW, and contribute to the <a href="https://longislandcwclub.org/">Long Island CW club</a> as an intermediate level instructor. 
-            I've developed the practice resources here to help myself and others to improve their Morse Code skills. 
-
-        </p>
+            I've developed the practice resources here to help myself and others progress to Morse Code fluency. 
+            </div>
+            <div  style="float:right; max-width: 18%">
+                <img src="/static/images/duane.png">
+            </div>
+        </div>
         <HR>
         <p id="pShowSidebar">
         <b style="font-size: 1.2em;">Practice resources:</b><BR>    
