user guide Word building TTR

--- a/api/app/templates/phrases/ttr.html
+++ b/api/app/templates/phrases/ttr.html
@@ -56,17 +56,17 @@
     </div>
     <div style="margin: 5px; float: left; border: 1px solid black; padding: 3px; background-color: #eeeeee; max-width: 600px;" >
         <H2>Word Building / TTR</H2>
-        This is a word discovery exercise. Go with the flow. Focus on forward motion.   
+        This is a word building exercise. Go with the flow. Focus on forward motion.   
         If a word is missed, ignore it. Focus on catching the next word. 
         Because the words are presented randomly, and without context, you may find this to be 
-        a good environment for improving your word discovery. <BR><BR>
+        a good environment for improving your word building skills. <BR><BR>
 
         The initial setting is 20 wpm with standard word spacing (420 milliseconds). 
         <BR><BR>
         If you change the repetitions to 2 or 3, you may confirm your recognition by listening again.
         <BR><BR>            
         Set the word collection, WPM, and word spacing so that you are missing some but not all of the words as they flow by. 
-        That difficulty level will be the sweet spot for improving word discovery.  
+        That difficulty level will be the sweet spot for improving word building.  
     </div>
 
 
