--- a/api/app/templates/user-guide.html
+++ b/api/app/templates/user-guide.html
@@ -22,9 +22,9 @@ The CW practice tools complement the Morse Code learning curriculum of the Long 
 <p>
 The Phrase Copy Practice tool randomly presents phrases and words from a variety of categories, e.g.    Words, Brand Slogans, Common Phrases, Song Titles, etc.  The user may select difficulty level by varying the speed of the code.  These exercises are very appropriate to the Intermediate 1 student, when focused on recognition of words and phrases.   The tool allows the user to listen to the word or phrase as many times as desired, and will reveal the phrase visually on request. 
 </p><p>
-The <B>simplest exercise</B> for this tool is copying words, for instance: 
+The <B>simplest exercise</B> for this tool is copying words. For instance: 
 <BR> 
-<a href="/phrases/?wpm=12&category=Word&filename=`3-letter3"> 3 letter words </a>
+<a href="/phrases/?wpm=12&category=Word&filename=`3-letter"> 3 letter words </a>
 <BR>
 When using the tool on a PC, "hot keys" are provided to control the exercise:
 <BR> - Right Arrow: Get the next phrase
@@ -38,12 +38,36 @@ When using the tool on a PC, "hot keys" are provided to control the exercise:
      <BR><a href="/phrases/?wpm=20&category=Rhyming+Couplet&filename=Shakespeare"> Shakespearean Rhyming Couplets </a><BR>
     Thousands of phrases are available with varying difficulty.    
 </p><P>
-    Students may practice at slow speeds by writing out the copy.  To prepare for higher level skills, students should try to do these exercises as head copy.   
+    You may practice at slow speeds by writing out the copy.  To prepare for higher level skills, try to do these exercises as head copy.   
 </P>
 </p><P>
-    <i><b> For effective learning and progress, students should set the difficulty level so that some misses occur, but where much is recognized.   Someplace in that zone will be the sweet spot for progress.</b></i>  
+    <i><b> For effective learning and progress,  set the difficulty level so that some misses occur, but where much is recognized.   Someplace in that zone will be the sweet spot for progress.</b></i>  
 </P>
+<B>Sending Practice</B>: This tool facilitates sending practice in two ways: 
+<ol>
+    <li>Listen to a word or a phrase, then send it to match the timing you heard.  Use the hot keys and repeat till satisfied.</li>
+    <li>Listen to a word or a phrase. Then repeat it, and after the first letter or word come in and play along as a duet.  You'll be able to hear duet tones well if you set your oscillator tone to 700 hertz. </li>
+</ol>
 
+<hr>
+
+<h3>Practice Tool: <a href="/phrases/ttr" style="text-decoration: underline; color: #f78787">Word Building/TTR</a></h3>
+<p>
+The Word Building/Time to Recognize (TTR) tool presents words in a random, continuous stream.  The tool encourages you to maintain a forward focus.   Maintaining a forward focus, and suppressing thoughts of missed characters is an essential skill on the path to fluency.   
+<BR><BR>
+<B>Difficulty Level</B>: Set a difficulty level that enhances your training, one where you are missing some, but not all (that's the sweet spot for training progress).  Difficulty may be set with four different controls: 
+<ul>
+    <li>Word Collection (easy or hard words)</li>
+    <li>WPM</li>
+    <li>Repetitions</li>
+    <li>Word Spacing</li>
+</ul> 
+
+<b>Word Building and Time to Recognize</b>:  Naturally, the time you take to recognize characters and assemble words will determine your Morse Code top speed.  Our amazing brains perform multiple functions simultaneously. As such guaging our Time to Recognize progress is best done in the context of word building and recognition.  This provides exactly that.  For the combination of WPM and word spacing you choose, the time between words is displayed.   For instance, 20 WPM with standard word spacing allows for 420 milliseconds between words.   In this exercise when consistently acheive recognition before the next word starts, then the word spacing time displayed is your current time to recognize.  Note that a higher WPM speed with more word spacing could represent a similar TTR. 
+
+<b>Project Overlearn</b>:  The tool complements the word building exercises of Project Overlearn. You can create exercises that meet or challenge your learning level by varying the four controls of difficulty level. 
+
+<hr>
 
 
 
