--- a/api/app/templates/user-guide.html
+++ b/api/app/templates/user-guide.html
@@ -53,7 +53,7 @@ When using the tool on a PC, "hot keys" are provided to control the exercise:
 
 <h3>Practice Tool: <a href="/phrases/ttr" style="text-decoration: underline; color: #f78787">Word Building/TTR</a></h3>
 <p>
-The Word Building/Time to Recognize (TTR) tool presents words in a random, continuous stream.  The tool encourages you to maintain a forward focus.   Maintaining a forward focus, and suppressing thoughts of missed characters is an essential skill on the path to fluency.   
+The Word Building/Time to Recognize (TTR) tool presents words in a random, continuous stream.  The tool encourages you to maintain a forward focus.   Maintaining a forward focus, and suppressing thoughts of missed characters is an essential skill on the path to fluency.  The tool never presents reveals the words visually.  Thus it further encourages you to forget about your misses and keep looking forward.  You may however ask for repetitions of the words to judge or reinforce your copy.    
 <BR><BR>
 <B>Difficulty Level</B>: Set a difficulty level that enhances your training, one where you are missing some, but not all (that's the sweet spot for training progress).  Difficulty may be set with four different controls: 
 <ul>
@@ -63,13 +63,29 @@ The Word Building/Time to Recognize (TTR) tool presents words in a random, conti
     <li>Word Spacing</li>
 </ul> 
 
-<b>Word Building and Time to Recognize</b>:  Naturally, the time you take to recognize characters and assemble words will determine your Morse Code top speed.  Our amazing brains perform multiple functions simultaneously. As such guaging our Time to Recognize progress is best done in the context of word building and recognition.  This provides exactly that.  For the combination of WPM and word spacing you choose, the time between words is displayed.   For instance, 20 WPM with standard word spacing allows for 420 milliseconds between words.   In this exercise when consistently acheive recognition before the next word starts, then the word spacing time displayed is your current time to recognize.  Note that a higher WPM speed with more word spacing could represent a similar TTR. 
+<b>Word Building and Time to Recognize</b>:  Naturally, the time you take to recognize characters and assemble words will determine your Morse Code top speed.  Our amazing brains perform multiple functions simultaneously. As such guaging our Time to Recognize progress is best done in the context of word building and recognition.  The tool provides exactly that.  For the combination of WPM and word spacing you choose, the time between words is displayed.   For instance, 20 WPM with standard word spacing allows for 420 milliseconds between words.   In this exercise when we acheive recognition before the next word starts, the word spacing time as displayed is your current time to recognize.  Note that a higher WPM speed with more word spacing could represent a similar TTR. 
 
 <b>Project Overlearn</b>:  The tool complements the word building exercises of Project Overlearn. You can create exercises that meet or challenge your learning level by varying the four controls of difficulty level. 
 
 <hr>
 
+<h3>Practice Tool: <a href="/phrases/phrase-flow" style="text-decoration: underline; color: #f78787">Phrase Flow / IFR</a></h3>
+<p>
+    Once you are competent in word building, you may progress toward CW fluency by practicing word discovery and Instant Flow Recovery (IFR). This practice tool presents random phrases in a continuous stream for you to listen to and discover their meaning.  The phrases are never displayed visually, so forward motion is really the only option.  With this focus, you confidently know that words will be perceived as they come along.  When you are at this level the magic starts to happen.   The skill you are acquiring is akin what you did when learning to read.   Initially you decoded words phonetically.  With more experience, you simply perceived words and phrases on the page with little or no decoding.   What a fun thing!  
+</p>
 
+
+<p>
+<B>Difficulty Level</B>: Set a difficulty level that enhances your training, one where you are missing some, but not all (that's the sweet spot for training progress).  Difficulty may be set with four different controls: 
+<ul>
+    <li>Phrase Collection (easy or hard phrases)</li>
+    <li>WPM</li>
+    <li>Repetitions</li>
+    <li>Word Spacing</li>
+</ul> 
+</p>
+
+<hr>
 
 
 
