user-guide full draft

--- a/api/app/templates/user-guide.html
+++ b/api/app/templates/user-guide.html
@@ -89,9 +89,35 @@ The Word Building/Time to Recognize (TTR) tool presents words in a random, conti
 
 
 
+<h3>Practice Tool: <a href="/phrases/sending" style="text-decoration: underline; color: #f78787">Phrase Sending</a></h3>
+<p>
+    The phrase sending tool, visually presents random phrases from a collection of your choice.  You may choose easy phrases or complex ones.   The right-arrow key may be used as a hot key to present the next random phrase.  A particularly interesting set of phrases for sending practice is "pangrams":   Sentences that contain all 26 letters of the alphabet.   You may want to use a phrase from this collection to start your daily sending practice. 
+</p>
+
+<hr>
+
+<h3>Practice Tool: <a href="/books" style="text-decoration: underline; color: #f78787">CW Books</a></h3>
+<p>
+    For an intense workout of your devleping skills, a collection of public domain books are presented in this tool.  You may set the WPM for the exercise, and optionally display the full text of the book part or chapter selected.   The books are divided into parts that run for five to ten minutes at 20 WPM.  A recommended practice routine is to just listen to the text three times through.  You may find that your comprehension increases each time.   
 
 
+</p>
+<p>
+<B>Difficulty Level</B>: The difficulty level may be adjusted by varying the WPM, or the selection of book.  <a href="/books/aesops_fables">Aesop's Fables</a> have some of the simplest text. 
+</p>
+<hr>
 
+<h3>Practice Tool: <a href="/callsigns/trainer" style="text-decoration: underline; color: #f78787">Callsign Trainer</a></h3>
+<p>
+ <b>Description</b>:  This tool plays a U.S. callsign twice and then displays the callsign.
+    <BR><BR>
+    <b>Usage</b>: The first time the callsign is played, it may optionally be played with some "word spacing" between the prefix and suffix of the callsign.  You may select that "word space" from 0 to 10.    
+    <BR><BR>
+    <b>Rationale</b>: This training follows the theory that short term memory has room for just a handful of items.  Those items may be concepts, characters, numbers, or whatever.  So if we can reduce the first part the callsign to a concept, rather than one or two characters and a number, then our short-term memory usage is simplified.  
+    
+    
+</p>
+<hr>
 
 </div>
 
