--- a/api/app/templates/user-guide.html
+++ b/api/app/templates/user-guide.html
@@ -20,7 +20,7 @@ The CW practice tools complement the Morse Code learning curriculum of the Long 
 <hr>
 <h3>Practice Tool: <a href="/phrases/" style="text-decoration: underline; color: #f78787">Phrase Copy</a></h3>
 <p>
-The Phrase Copy Practice tool randomly presents phrases and words from a variety of categories, e.g.    Words, Brand Slogans, Common Phrases, Song Titles, etc.  The user may select difficulty level by varying the speed of the code.  These exercises are very appropriate to the Intermediate 1 student, when focused on recognition of words and phrases.   The tool allows the user to listen to the word or phrase as many times as desired, and will reveal the phrase visually on request. 
+The Phrase Copy Practice tool randomly presents phrases and words from a variety of categories, e.g.    Words, Brand Slogans, Common Phrases, Song Titles, etc.  You may select difficulty level by varying the speed of the code.  These exercises are very appropriate to the Intermediate 1 student, when focused on recognition of words and phrases.   The tool allows you to listen to the word or phrase as many times as desired, and will reveal the phrase visually on request. 
 </p><p>
 The <B>simplest exercise</B> for this tool is copying words. For instance: 
 <BR> 
@@ -53,7 +53,7 @@ When using the tool on a PC, "hot keys" are provided to control the exercise:
 
 <h3>Practice Tool: <a href="/phrases/ttr" style="text-decoration: underline; color: #f78787">Word Building/TTR</a></h3>
 <p>
-The Word Building/Time to Recognize (TTR) tool presents words in a random, continuous stream.  The tool encourages you to maintain a forward focus.   Maintaining a forward focus, and suppressing thoughts of missed characters is an essential skill on the path to fluency.  The tool never presents reveals the words visually.  Thus it further encourages you to forget about your misses and keep looking forward.  You may however ask for repetitions of the words to judge or reinforce your copy.    
+The Word Building/Time to Recognize (TTR) tool presents words in a random, continuous stream.  The tool encourages you to maintain a forward focus.   Maintaining a forward focus, and suppressing thoughts of missed characters is an essential skill on the path to fluency.  The tool never  reveals the words visually.  Thus it further encourages you to forget about your misses and keep looking forward.  You may however ask for repetitions of the words to judge or reinforce your copy.    
 <BR><BR>
 <B>Difficulty Level</B>: Set a difficulty level that enhances your training, one where you are missing some, but not all (that's the sweet spot for training progress).  Difficulty may be set with four different controls: 
 <ul>
@@ -63,8 +63,8 @@ The Word Building/Time to Recognize (TTR) tool presents words in a random, conti
     <li>Word Spacing</li>
 </ul> 
 
-<b>Word Building and Time to Recognize</b>:  Naturally, the time you take to recognize characters and assemble words will determine your Morse Code top speed.  Our amazing brains perform multiple functions simultaneously. As such guaging our Time to Recognize progress is best done in the context of word building and recognition.  The tool provides exactly that.  For the combination of WPM and word spacing you choose, the time between words is displayed.   For instance, 20 WPM with standard word spacing allows for 420 milliseconds between words.   In this exercise when we acheive recognition before the next word starts, the word spacing time as displayed is your current time to recognize.  Note that a higher WPM speed with more word spacing could represent a similar TTR. 
-
+<b>Word Building and Time to Recognize</b>:  Naturally, the time you take to recognize characters and assemble words will determine your Morse Code top speed.  Our amazing brains perform multiple functions simultaneously. As such guaging our Time to Recognize progress is best done in the context of word building and recognition.  The tool provides exactly that.  For the combination of WPM and word spacing you choose, the time between words is displayed.   For instance, 20 WPM with standard word spacing allows for 420 milliseconds between words.   In this exercise when we acheive recognition before the next word starts, the word spacing time as displayed is your time to recognize.  Note that a higher WPM speed with more word spacing could represent a similar TTR. 
+<BR><BR>
 <b>Project Overlearn</b>:  The tool complements the word building exercises of Project Overlearn. You can create exercises that meet or challenge your learning level by varying the four controls of difficulty level. 
 
 <hr>
