--- a/api/app/templates/user-guide.html
+++ b/api/app/templates/user-guide.html
@@ -91,7 +91,7 @@ The Word Building/Time to Recognize (TTR) tool presents words in a random, conti
 
 <h3>Practice Tool: <a href="/phrases/sending" style="text-decoration: underline; color: #f78787">Phrase Sending</a></h3>
 <p>
-    The phrase sending tool, visually presents random phrases from a collection of your choice.  You may choose easy phrases or complex ones.   The right-arrow key may be used as a hot key to present the next random phrase.  A particularly interesting set of phrases for sending practice is "pangrams":   Sentences that contain all 26 letters of the alphabet.   You may want to use a phrase from this collection to start your daily sending practice. 
+    The phrase sending tool, visually presents random phrases from a collection of your choice.  You may choose easy phrases or complex ones.   The right-arrow key may be used as a hot key to present the next random phrase.  A particularly interesting set of phrases for sending practice is "pangrams":   sentences that contain all 26 letters of the alphabet.   You may want to use a phrase from this collection to start your daily sending practice. 
 </p>
 
 <hr>
