--- a/api/app/templates/user-guide.html
+++ b/api/app/templates/user-guide.html
@@ -18,7 +18,7 @@ The CW practice tools complement the Morse Code learning curriculum of the Long 
     </ul>    
 </p>
 <hr>
-<h3>Practice Tool: <a href="/phrases/" style="text-decoration: underline; color: #f78787">Phrase Copy</a></h3>
+<h3>Practice Tool: <a id="phrase-copy" href="/phrases/" style="text-decoration: underline; color: #f78787">Phrase Copy</a></h3>
 <p>
 The Phrase Copy Practice tool randomly presents phrases and words from a variety of categories, e.g.    Words, Brand Slogans, Common Phrases, Song Titles, etc.  You may select difficulty level by varying the speed of the code.  These exercises are very appropriate to the Intermediate 1 student, when focused on recognition of words and phrases.   The tool allows you to listen to the word or phrase as many times as desired, and will reveal the phrase visually on request. 
 </p><p>
@@ -30,7 +30,7 @@ When using the tool on a PC, "hot keys" are provided to control the exercise:
 <BR> - Right Arrow: Get the next phrase
 <BR> - Left Arrow: Play the phrase again
 <BR> - Up Arrow: Reveal the phrase
-<BR> - Down Arrow: Hide the next phrase
+<BR> - Down Arrow: Hide the phrase
 <BR>
     On all devices, these functions may be accessed with a click or touch. 
 </p><p>
@@ -51,7 +51,7 @@ When using the tool on a PC, "hot keys" are provided to control the exercise:
 
 <hr>
 
-<h3>Practice Tool: <a href="/phrases/ttr" style="text-decoration: underline; color: #f78787">Word Building/TTR</a></h3>
+<h3>Practice Tool: <a id="word-building" href="/phrases/ttr" style="text-decoration: underline; color: #f78787">Word Building/TTR</a></h3>
 <p>
 The Word Building/Time to Recognize (TTR) tool presents words in a random, continuous stream.  The tool encourages you to maintain a forward focus.   Maintaining a forward focus, and suppressing thoughts of missed characters is an essential skill on the path to fluency.  The tool never  reveals the words visually.  Thus it further encourages you to forget about your misses and keep looking forward.  You may however ask for repetitions of the words to judge or reinforce your copy.    
 <BR><BR>
@@ -63,13 +63,13 @@ The Word Building/Time to Recognize (TTR) tool presents words in a random, conti
     <li>Word Spacing</li>
 </ul> 
 
-<b>Word Building and Time to Recognize</b>:  Naturally, the time you take to recognize characters and assemble words will determine your Morse Code top speed.  Our amazing brains perform multiple functions simultaneously. As such guaging our Time to Recognize progress is best done in the context of word building and recognition.  The tool provides exactly that.  For the combination of WPM and word spacing you choose, the time between words is displayed.   For instance, 20 WPM with standard word spacing allows for 420 milliseconds between words.   In this exercise when we acheive recognition before the next word starts, the word spacing time as displayed is your time to recognize.  Note that a higher WPM speed with more word spacing could represent a similar TTR. 
+<b>Word Building and Time to Recognize</b>:  Naturally, the time you take to recognize characters and assemble words will determine your Morse Code top speed.  Our amazing brains perform multiple functions simultaneously. As such guaging our Time to Recognize progress is best done in the context of word building and recognition.  The tool provides exactly that.  For the combination of WPM and word spacing you choose, the time between words is displayed.   For instance, 20 WPM with standard word spacing allows for 420 milliseconds between words.   In this exercise when you acheive recognition before the next word starts, the word spacing time as displayed is your time to recognize.  Note that a higher WPM speed with more word spacing could represent a similar TTR. 
 <BR><BR>
 <b>Project Overlearn</b>:  The tool complements the word building exercises of Project Overlearn. You can create exercises that meet or challenge your learning level by varying the four controls of difficulty level. 
 
 <hr>
 
-<h3>Practice Tool: <a href="/phrases/phrase-flow" style="text-decoration: underline; color: #f78787">Phrase Flow / IFR</a></h3>
+<h3>Practice Tool: <a id="phrase-flow" href="/phrases/phrase-flow" style="text-decoration: underline; color: #f78787">Phrase Flow / IFR</a></h3>
 <p>
     Once you are competent in word building, you may progress toward CW fluency by practicing word discovery and Instant Flow Recovery (IFR). This practice tool presents random phrases in a continuous stream for you to listen to and discover their meaning.  The phrases are never displayed visually, so forward motion is really the only option.  With this focus, you confidently know that words will be perceived as they come along.  When you are at this level the magic starts to happen.   The skill you are acquiring is akin what you did when learning to read.   Initially you decoded words phonetically.  With more experience, you simply perceived words and phrases on the page with little or no decoding.   What a fun thing!  
 </p>
@@ -89,14 +89,14 @@ The Word Building/Time to Recognize (TTR) tool presents words in a random, conti
 
 
 
-<h3>Practice Tool: <a href="/phrases/sending" style="text-decoration: underline; color: #f78787">Phrase Sending</a></h3>
+<h3>Practice Tool: <a id="sending" href="/phrases/sending" style="text-decoration: underline; color: #f78787">Phrase Sending</a></h3>
 <p>
     The phrase sending tool, visually presents random phrases from a collection of your choice.  You may choose easy phrases or complex ones.   The right-arrow key may be used as a hot key to present the next random phrase.  A particularly interesting set of phrases for sending practice is "pangrams":   sentences that contain all 26 letters of the alphabet.   You may want to use a phrase from this collection to start your daily sending practice. 
 </p>
 
 <hr>
 
-<h3>Practice Tool: <a href="/books" style="text-decoration: underline; color: #f78787">CW Books</a></h3>
+<h3>Practice Tool: <a id="books" href="/books" style="text-decoration: underline; color: #f78787">CW Books</a></h3>
 <p>
     For an intense workout of your devleping skills, a collection of public domain books are presented in this tool.  You may set the WPM for the exercise, and optionally display the full text of the book part or chapter selected.   The books are divided into parts that run for five to ten minutes at 20 WPM.  A recommended practice routine is to just listen to the text three times through.  You may find that your comprehension increases each time.   
 
@@ -105,9 +105,14 @@ The Word Building/Time to Recognize (TTR) tool presents words in a random, conti
 <p>
 <B>Difficulty Level</B>: The difficulty level may be adjusted by varying the WPM, or the selection of book.  <a href="/books/aesops_fables">Aesop's Fables</a> have some of the simplest text. 
 </p>
+
+<p>
+<B>Alternate usage:</B> If you are interested in testing your transcription skills with the <a href="https://www.arrl.org/qualifying-run-schedule">ARRL Code Proficiency Runs</a>, these CW books may help you prepare.  Be forewarned though: the proficiency runs will contain numbers.  Number practice may be found in this phrase work: <a href="/phrases/?wpm=20&category=Experimental&filename=Address" >Addresses</a>
+</p>
+
 <hr>
 
-<h3>Practice Tool: <a href="/callsigns/trainer" style="text-decoration: underline; color: #f78787">Callsign Trainer</a></h3>
+<h3>Practice Tool: <a id="callsign-trainer" href="/callsigns/trainer" style="text-decoration: underline; color: #f78787">Callsign Trainer</a></h3>
 <p>
  <b>Description</b>:  This tool plays a U.S. callsign twice and then displays the callsign.
     <BR><BR>
